--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <a href="#" class="logo">
 
-                <img src="pictures/image5.png" alt>
+                <img src="pictures/image6.webp" alt>
             </a>
 
             <nav class="navbar">
@@ -163,7 +163,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Macchiato</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
@@ -175,7 +175,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Flat White</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
@@ -187,7 +187,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Americano</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
@@ -199,7 +199,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Caramel Macchiato</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
@@ -211,7 +211,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Macho</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
@@ -223,7 +223,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Flat White</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
@@ -235,7 +235,7 @@
                     <img src="pictures/image3.png" alt>
 
                     <h3>Macchiato</h3>
-                    <!-- <div class="price">$15.99 <span>20.99 </span></div> -->
+
                     <div class="price">$15</div>
 
                     <a href="#" class="btn">add to cart</a>
