--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                     <h3>Macchiato</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$13</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -176,7 +176,7 @@
 
                     <h3>Flat White</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$20</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -188,7 +188,7 @@
 
                     <h3>Americano</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$12</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -200,7 +200,7 @@
 
                     <h3>Caramel Macchiato</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$17</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -212,7 +212,7 @@
 
                     <h3>Macho</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$10</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -224,7 +224,7 @@
 
                     <h3>Flat White</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$18</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -236,7 +236,7 @@
 
                     <h3>Macchiato</h3>
 
-                    <div class="price">$15</div>
+                    <div class="price">$19</div>
 
                     <a href="#" class="btn">add to cart</a>
 
@@ -247,6 +247,427 @@
         </section>
 
         <!-- menu section ends -->
+
+        <!-- product section starts -->
+
+        <section class="products" id="products">
+
+            <h1 class="heading">LATEST<span>PRODUCTS</span></h1>
+
+            <div class="box-container">
+
+                <div class="box">
+
+                    <div class="icons">
+
+                        <a class="fa-solid fa-cart-shopping"></a>
+
+                        <a class="fa-solid fa-heart"></a>
+
+                        <a class="fa-solid fa-eye"></a>
+
+                    </div>
+
+                    <div class="image">
+
+                        <img src="pictures/image7.jpg" alt>
+
+                    </div>
+
+                    <div class="content">
+
+                        <h3>fresh coffee</h3>
+
+                        <div class="stars">
+
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half"></i>
+
+                        </div>
+
+                        <div class="price">$15.99<span>$20.99</span></div>
+
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <div class="icons">
+
+                        <a class="fa-solid fa-cart-shopping"></a>
+
+                        <a class="fa-solid fa-heart"></a>
+
+                        <a class="fa-solid fa-eye"></a>
+
+                    </div>
+
+                    <div class="image">
+
+                        <img src="pictures/image8.webp" alt>
+
+                    </div>
+
+                    <div class="content">
+
+                        <h3>fresh coffee</h3>
+
+                        <div class="stars">
+
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half"></i>
+
+                        </div>
+
+                        <div class="price">$15.99<span>$20.99</span></div>
+
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <div class="icons">
+
+                        <a class="fa-solid fa-cart-shopping"></a>
+
+                        <a class="fa-solid fa-heart"></a>
+
+                        <a class="fa-solid fa-eye"></a>
+
+                    </div>
+
+                    <div class="image">
+
+                        <img src="pictures/image7.jpg" alt>
+
+                    </div>
+
+                    <div class="content">
+
+                        <h3>fresh coffee</h3>
+
+                        <div class="stars">
+
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half"></i>
+
+                        </div>
+
+                        <div class="price">$15.99<span>$20.99</span></div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- products section end -->
+
+        <!-- review section starts -->
+
+        <section class="review" id="review">
+
+            <h1 class="heading">customer's<span>review</span></h1>
+
+            <div class="box-container">
+
+                <div class="box">
+
+                    <img src alt>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Alias odit esse odio autem
+                        quisquam asperiores, dolore illum! Vel dicta
+                        eaque, eum alias voluptates saepe cumque
+                        nesciunt, maxime hic quo minima.</p>
+
+                    <img src="pictures/image9.jpg" class="user" alt>
+
+                    <h3>john deo</h3>
+
+                    <div class="stars">
+
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <img src alt>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Alias odit esse odio autem
+                        quisquam asperiores, dolore illum! Vel dicta
+                        eaque, eum alias voluptates saepe cumque
+                        nesciunt, maxime hic quo minima.</p>
+
+                    <img src="pictures/image10.jpg" class="user" alt>
+
+                    <h3>john deo</h3>
+
+                    <div class="stars">
+
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <img src alt>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Alias odit esse odio autem
+                        quisquam asperiores, dolore illum! Vel dicta
+                        eaque, eum alias voluptates saepe cumque
+                        nesciunt, maxime hic quo minima.</p>
+
+                    <img src="pictures/image9.jpg" class="user" alt>
+
+                    <h3>john deo</h3>
+
+                    <div class="stars">
+
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <img src alt>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit. Alias odit esse odio autem
+                        quisquam asperiores, dolore illum! Vel dicta
+                        eaque, eum alias voluptates saepe cumque
+                        nesciunt, maxime hic quo minima.</p>
+
+                    <img src="pictures/image10.jpg" class="user" alt>
+
+                    <h3>john deo</h3>
+
+                    <div class="stars">
+
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <!-- review section ends -->
+
+        <!-- contact section starts -->
+
+        <section class="contact" id="contact">
+
+            <h1 class="heading"><span>contact</span>us</h1>
+
+            <div class="row">
+
+                <iframe class="map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788310387466!2d72.82012483859363!3d19.14168989602779!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1718780159445!5m2!1sen!2sin"
+                    width="600" height="450" style="border:0;"
+                    allowfullscreen loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <form action>
+
+                    <h3>get in touch</h3>
+                    <div class="inputBox">
+
+                        <span class="fas fa-user"></span>
+                        <input type="text" placeholder="name">
+
+                    </div>
+
+                    <div class="inputBox">
+
+                        <span class="fas fa-envelope"></span>
+                        <input type="email" placeholder="email">
+
+                    </div>
+
+                    <div class="inputBox">
+
+                        <span class="fas fa-phone"></span>
+                        <input type="number" placeholder="number">
+
+                    </div>
+
+                    <input type="submit" value="contact now"
+                        class="btn">
+
+                </form>
+
+            </div>
+        </section>
+
+        <!-- contact section ends -->
+
+        <!-- blogs section starts -->
+
+        <section class="blogs" id="blogs">
+
+            <h1 class="heading">our<span>blogs</span></h1>
+
+            <div class="box-container">
+
+                <div class="box">
+
+                    <div class="image">
+
+                        <img src="pictures/image11.avif" alt>
+
+                    </div>
+
+                    <div class="content">
+
+                        <a href="#" class="title">tasty and refreshing
+                            coffee</a>
+                        <span>by admin / 21st may, 2011</span>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Rerum placeat, neque
+                            dolorem rem officiis ipsa quod sapiente a,
+                            saepe, repellendus molestias doloribus
+                            dignissimos iusto error illum odit. Nam,
+                            quibusdam tempora.</p>
+
+                        <a href="#" class="btn">read more</a>
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <div class="image">
+
+                        <img src="pictures/image12.jpg" alt>
+
+                    </div>
+
+                    <div class="content">
+
+                        <a href="#" class="title">tasty and refreshing
+                            coffee</a>
+                        <span>by admin / 21st may, 2011</span>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Rerum placeat, neque
+                            dolorem rem officiis ipsa quod sapiente a,
+                            saepe, repellendus molestias doloribus
+                            dignissimos iusto error illum odit. Nam,
+                            quibusdam tempora.</p>
+
+                        <a href="#" class="btn">read more</a>
+                    </div>
+
+                </div>
+
+                <div class="box">
+
+                    <div class="image">
+
+                        <img src="pictures/image13.webp" alt>
+
+                    </div>
+
+                    <div class="content">
+
+                        <a href="#" class="title">tasty and refreshing
+                            coffee</a>
+                        <span>by admin / 21st may, 2011</span>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Rerum placeat, neque
+                            dolorem rem officiis ipsa quod sapiente a,
+                            saepe, repellendus molestias doloribus
+                            dignissimos iusto error illum odit. Nam,
+                            quibusdam tempora.</p>
+
+                        <a href="#" class="btn">read more</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- blogs section ends -->
+
+        <!-- footer section starts -->
+
+        <section class="footer">
+
+            <div class="share">
+
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fab fa-pinterest"></a>
+
+            </div>
+
+            <div class="links">
+                <a href="#">home</a>
+                <a href="#">about</a>
+                <a href="#">menu</a>
+                <a href="#">products</a>
+                <a href="#">review</a>
+                <a href="#">contact</a>
+                <a href="#">blogs</a>
+
+            </div>
+
+            <div class="credit">created by<span>mr. web designer</span>
+                | all rights reserved</div>
+
+        </section>
+
+        <!-- footer section ends -->
+
+        <!-- custom js file link -->
+
+        <!-- <script src="js/script.js"></script> -->
 
     </body>
 </html>
